--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,9 @@
   "name": "dark-kitt/wordpress-theme-configuration",
   "description": "WordPress theme configuration MU-Plugin, which includes multiple WordPress hooks to improve themes",
   "type": "wordpress-muplugin",
+  "require": {
+    "dark-kitt/wordpress-mu-plugin-autoloader": "^1.0"
+  },
   "license": "CC-BY-4.0",
   "authors": [
     {
